Update service names for unique Render deployment

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=https://hotel-sankara-api.onrender.com
+REACT_APP_API_URL=https://sankara-hotel-api.onrender.com
 REACT_APP_ENV=production
