Fix backend start command in render.yaml

--- a/render.yaml
+++ b/render.yaml
@@ -3,10 +3,12 @@ services:
     name: hotel-sankara-api
     env: python
     buildCommand: cd backend && pip install -r requirements.txt
-    startCommand: cd backend && gunicorn app:app
+    startCommand: cd backend && python -m gunicorn --chdir backend app:app
     envVars:
       - key: PYTHON_VERSION
         value: 3.8.0
+      - key: FLASK_ENV
+        value: production
 
   - type: web
     name: hotel-sankara-frontend
