--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
 Flask==2.0.1
 Flask-Cors==3.0.10
+Flask-SQLAlchemy==3.0.2
+Flask-JWT-Extended==4.5.2
 pymongo==3.12.0
 python-dotenv==0.19.0
 gunicorn==20.1.0
+pytest==7.4.3
+waitress==2.1.2
+Werkzeug==2.0.3
+SQLAlchemy==1.4.41
